--- a/libs/stdlib/Cargo.toml
+++ b/libs/stdlib/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2021"
 [build-dependencies]
 glob = "0.3"
 
-[build-dependencies.rusty]
-path = "../../"
+[build-dependencies.plc_driver]
+path = "../../compiler/plc_driver"
 
 
 [dev-dependencies.iec61131std]
 path= "."
 features = ["mock_time"]
 
-[dev-dependencies.rusty]
-path = "../../"
+[dev-dependencies.plc_driver]
+path = "../../compiler/plc_driver"
 
 [dev-dependencies.inkwell]
 git = "https://github.com/TheDan64/inkwell"
